[gd_scene load_steps=16 format=3 uid="uid://bm0njtyr4l7pp"]

[ext_resource type="Script" path="res://scenes/scripts/SoundController.gd" id="1_ixe2t"]
[ext_resource type="AudioStream" uid="uid://bbhmaybowvii2" path="res://resources/music/GamuxGJ - MUS_Menu.ogg" id="2_cbale"]
[ext_resource type="AudioStream" uid="uid://clk6xxb2a7l3x" path="res://resources/music/GamuxGJ - MUS_Gameplay.ogg" id="3_en7db"]
[ext_resource type="AudioStream" uid="uid://db8vyuka1rbm7" path="res://resources/sfx/Cenário/Botão do Laser/GamuxGJ - SFX_Switch_Off.wav" id="4_nkljd"]
[ext_resource type="AudioStream" uid="uid://qkroajkit573" path="res://resources/sfx/Cenário/Botão do Laser/GamuxGJ - SFX_Switch_On.wav" id="5_bj0pb"]
[ext_resource type="AudioStream" uid="uid://cqxfdc6f6fktn" path="res://resources/sfx/Cenário/Laser on-off/GamuxGJ - SFX_Laser_Off.wav" id="6_kuc1n"]
[ext_resource type="AudioStream" uid="uid://bcg3w76b3os5k" path="res://resources/sfx/Cenário/Laser on-off/GamuxGJ - SFX_Laser_On.wav" id="7_4xgo4"]
[ext_resource type="AudioStream" uid="uid://dy0241x6ih2v2" path="res://resources/sfx/Personagens/Detecção/GamuxGJ - SFX_Detecção.wav" id="8_46clp"]
[ext_resource type="AudioStream" uid="uid://dkcdo6huuy862" path="res://resources/sfx/Personagens/Fuga pela Porta/GamuxGJ - SFX_Fuga.wav" id="9_arrc1"]
[ext_resource type="AudioStream" uid="uid://hqse3rxav1cm" path="res://resources/sfx/Personagens/Morte no Laser/GamuxGJ - SFX_Morte_Laser.wav" id="10_vs5yk"]
[ext_resource type="AudioStream" uid="uid://byxoy8mgrsoul" path="res://resources/sfx/Personagens/Passos/GamuxGJ - SFX_Passo_Esquerda.wav" id="11_2t5yw"]
[ext_resource type="AudioStream" uid="uid://bdeaqucy74m0f" path="res://resources/sfx/Personagens/Passos/GamuxGJ - SFX_Passo_Direita.wav" id="11_6wrkl"]
[ext_resource type="AudioStream" uid="uid://dcejvc68t3jkf" path="res://resources/sfx/Personagens/Troca de Personagem/GamuxGJ - SFX_Swap.wav" id="13_8ai5s"]
[ext_resource type="AudioStream" uid="uid://bwu2047rttjd0" path="res://resources/sfx/UI/GamuxGJ - SFX_Botão_Play.wav" id="14_06fl3"]
[ext_resource type="AudioStream" uid="uid://bdsg8q74kr7eg" path="res://resources/sfx/Personagens/Sons de Diálogo/GamuxGJ - SFX_Dialogo.wav" id="15_cc4o3"]

[node name="SoundController" type="Node"]
script = ExtResource("1_ixe2t")

[node name="Music" type="Node" parent="."]

[node name="Menu" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("2_cbale")

[node name="GameLoop" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("3_en7db")

[node name="SFX" type="Node" parent="."]

[node name="SwitchOff" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_nkljd")

[node name="SwitchOn" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_bj0pb")

[node name="LaserOff" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_kuc1n")

[node name="LaserOn" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_4xgo4")

[node name="Detection" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_46clp")

[node name="Win" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_arrc1")

[node name="Die" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_vs5yk")

[node name="StepLeft" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_2t5yw")

[node name="StepRight" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_6wrkl")

[node name="Swoosh" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_8ai5s")

[node name="Click" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_06fl3")

[node name="Dialogue" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_cc4o3")
